# TechM

./: .gitignore  APQC-COVERAGE.md  CLAUDE.md  FORWARD-PLAN.md  PLAN.md  README.md  WARRANTY-BLUEPRINT.md  docker-compose.yml
backend/: .env.example  Dockerfile  aftersales.db  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: audit.py  auth.py  claims.py  intake.py  metrics.py  parts.py  recalls.py  recoveries.py  stream.py  tickets.py  vehicles.py
backend/app/core/langgraph/: intake.py  orchestrator.py  state.py
backend/app/core/langgraph/domains/: parts.py  recall.py  warranty.py
backend/app/data/: warranty_terms.py
backend/app/db/: session.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/seed/: seed.py
backend/app/services/: checkpoint.py  events.py  graph_runner.py  llm.py  notify.py  retrieval.py  security.py  supplier_recovery.py
backend/app/tools/: claim_history.py  component_map.py  cost_estimate.py  responsible_party.py  vin_lookup.py  warranty_check.py
backend/tests/: conftest.py  test_claim_history.py  test_component_map.py  test_cost_estimate.py  test_eligibility.py  test_intake_loop.py  test_parts.py  test_recall.py  test_responsible_party.py  test_retrieval.py  test_routing.py  test_supplier_recovery.py  test_tickets_api.py  test_vehicles.py  test_warranty_vision.py
backend/tests/eval/: harness.py  run_eval.py  scenarios.py  test_harness.py
frontend/: Dockerfile
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Header.tsx  (+2 more)
(+11 files in other folders)
