[project]
name = "aftersales-command-center"
version = "0.1.0"
description = "Plan B Unified AI Command Center — automotive after-sales agent demo (backend)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0",
    "langgraph-checkpoint-sqlite>=2.0",
    "pyjwt>=2.8",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-ollama>=0.2",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    # Policy RAG: local sentence-embedding model for semantic clause retrieval.
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
